# openai-stackhack-2023

./: .gitignore  main.py
client/: package.json
client/src/components/chat/: Message.tsx
client/src/components/shell/: Header.tsx
client/src/pages/: _app.tsx  chat.tsx  index.tsx
client/src/pages/api/: chat.ts
client/src/pages/sp/: chat.tsx
client/src/types/: Chat.types.ts
playground/: .gitignore  login.py  pyproject.toml
playground/blockchain/server/: requirements.txt  test.ipynb  test_server.ipynb
playground/redis/: aimd-chat-redis-demo.ipynb  aimd-chat-test.ipynb  mplus-chat-test.ipynb  multi-lingual-demo.ipynb  nbutils.py  redis-openai-wikipedia.ipynb  redis-openai.ipynb  reviews_1k.csv  reviews_1k_embeddings.csv
scraper/: .gitignore  TODO  data.csv  requirements.txt  testing.ipynb  topics.csv
server/: .gitignore  Dockerfile  TODO  exec.sh  login.py  main.py  requirements.txt  server-test.ipynb  server.py
server/middleware/: auth.py
