[tool.poetry]
name = "openai-stackhack-2023"
version = "0.1.0"
description = ""
authors = ["Tenkara <rajknakka@gmail.com>"]
readme = "README.md"
packages = [{include = "openai_stackhack_2023"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
